--- a/react-udemy/package.json
+++ b/react-udemy/package.json
@@ -10,7 +10,7 @@
     "html-react-parser": "^5.1.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
