--- a/react-udemy/package.json
+++ b/react-udemy/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
     "bootstrap-icons": "^1.11.3",
+    "buffer": "^6.0.3",
+    "d3": "^7.9.0",
     "html-react-parser": "^5.1.12",
+    "plotly.js": "^2.35.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0",
     "react-scripts": "^5.0.1",
+    "stream": "^0.0.3",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
@@ -39,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.25.7",
     "tailwindcss": "^3.4.10"
   }
 }
