--- a/react-udemy/package.json
+++ b/react-udemy/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "stream": "^0.0.3",
     "stream-browserify": "^3.0.0",
