--- a/react-udemy/package.json
+++ b/react-udemy/package.json
@@ -17,8 +17,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-plotly.js": "^2.6.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
     "stream": "^0.0.3",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.12",
