--- a/typescript-react/package.json
+++ b/typescript-react/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.118",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "driver.js": "^1.3.1",
     "history": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
