--- a/typescript-react/package.json
+++ b/typescript-react/package.json
@@ -16,6 +16,7 @@
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.3.1",
     "router": "^1.3.8",
     "ts-jest": "^26.5.6",
     "ts-node": "^10.9.2",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.1",
-    "@types/jest": "^29.5.14"
+    "@types/jest": "^29.5.14",
+    "@types/react-test-renderer": "^18.3.0"
   }
 }
